--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "nodemon": "^3.1.0"
+  },
+  "scripts": {
+    "start": "nodemon main.js"
   }
 }
